[package]
name = "httpd"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tiny_http = "0.11"
ascii = "1.0"
vfs = { version = "0.7", features = ["embedded-fs"] }
rust-embed = { version = "6", features = ["debug-embed"] }

[target.'cfg(target_os = "hermit")'.dependencies.hermit-sys]
version = "0.2"
default-features = false

[features]
default = ["pci", "pci-ids", "acpi", "tcp", "dhcpv4"]
vga = ["hermit-sys/vga"]
dhcpv4 = ["hermit-sys/dhcpv4"]
pci = ["hermit-sys/pci"]
pci-ids = ["hermit-sys/pci-ids"]
acpi = ["hermit-sys/acpi"]
fsgsbase = ["hermit-sys/fsgsbase"]
smp = ["hermit-sys/smp"]
tcp = ["hermit-sys/tcp"]
instrument = ["hermit-sys/instrument"]
trace = ["hermit-sys/trace"]
